Implements filter for repository.

--- a/PCF.Application.Data.EntityFramework/PCF.Application.Data.EntityFramework.csproj
+++ b/PCF.Application.Data.EntityFramework/PCF.Application.Data.EntityFramework.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PFC.Application\PFC.Application.csproj" />
+      <ProjectReference Include="..\PFC.Data.EntityFramework\PFC.Data.EntityFramework.csproj" />
+    </ItemGroup>
+
 </Project>
